clusters/home-lab/apps/Nginx-test/ingress.yaml
---
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: nginx
  namespace: default
  annotations: 
    kubernetes.io/ingress.class: traefik-external
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`www.nginx.home.limb.network`)
      kind: Rule
      services:
        - name: nginx
          port: 80
    - match: Host(`nginx.home.limb.network`)
      kind: Rule
      services:
        - name: nginx
          port: 80
      middlewares:
        - name: default-headers
  tls:
    secretName: staging-home-limb-network
